Update: .gitignore menolak isi folder uploads gambar tapi tetap mempertahankan foldernya

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ Thumbs.db
 # Build output
 /dist
 /build
+
+# Uploads (User Generated Content)
+/public/uploads/*
+
+# pertahankan struktur foldernya biar ada
+!/public/uploads/.gitkeep
