--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "openmusic-api-v2",
-  "version": "1.0.0",
+  "name": "openmusic-api-v3",
+  "version": "3.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
     "start-dev": "nodemon src/server.js",
     "lint": "eslint .",
-    "migrate": "node-pg-migrate up"
+    "migrate": "node-pg-migrate up",
+    "start-consumer": "node src/consumer/index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "amqplib": "^0.10.9",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
+    "fs-extra": "^11.3.2",
     "joi": "^18.0.1",
     "nanoid": "^5.1.6",
     "node-pg-migrate": "^8.0.3",
