Update: .env.example

--- a/.env.example
+++ b/.env.example
@@ -7,42 +7,41 @@ PORT=5000
 # ------------------------------
 # Konfigurasi Database (PostgreSQL)
 # ------------------------------
-PGUSER=openmusic
-PGPASSWORD=password123
-PGDATABASE=openmusicdb
-PGHOST=localhost
-PGPORT=5432
+PGUSER=
+PGPASSWORD=
+PGDATABASE=
+PGHOST=
+PGPORT=
 
 # ------------------------------
 # Konfigurasi Autentikasi (JWT)
 # ------------------------------
 # Ganti dengan string acak yang SANGAT rahasia (minimal 64 karakter)
-ACCESS_TOKEN_KEY=your_super_secret_access_token_key_here
-REFRESH_TOKEN_KEY=your_other_super_secret_refresh_token_key_here
+ACCESS_TOKEN_KEY=
+REFRESH_TOKEN_KEY=
 
 # ------------------------------
 # Konfigurasi Layanan Eksternal
 # ------------------------------
 
 # Message Broker (RabbitMQ)
-RABBITMQ_SERVER=amqp://openmusic:password123@localhost:5672
+RABBITMQ_SERVER=
 
 # Cache (Redis)
-REDIS_SERVER=redis://localhost:6379
+REDIS_SERVER=
 
 # Email (Nodemailer)
 # (Direkomendasikan menggunakan Mailtrap.io untuk development)
-SMTP_HOST=smtp.mailtrap.io
-SMTP_PORT=2525
-SMTP_USER=your_mailtrap_user_here
-SMTP_PASSWORD=your_mailtrap_password_here
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
 
 # ------------------------------
 # Konfigurasi File Storage
 # ------------------------------
 # Pilih salah satu: 'local' atau 's3'
-# Proyek ini disetup untuk 'local'
-STORAGE_TYPE=local
+STORAGE_TYPE=
 
 # Variabel untuk Opsi 2: Penyimpanan S3 (Jika diaktifkan)
 # AWS_BUCKET_NAME=your-s3-bucket-name
