--- a/openmusic-api/package.json
+++ b/openmusic-api/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "openmusic-api-v3",
+  "name": "openmusic-api",
   "version": "3.0.0",
-  "main": "index.js",
+  "description": "OpenMusic API Application",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
     "start-dev": "nodemon src/server.js",
-    "lint": "eslint .",
     "migrate": "node-pg-migrate up",
-    "start-consumer": "node src/consumer/index.js"
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "nodemon": "^3.1.10"
+  },
   "dependencies": {
     "@hapi/hapi": "^21.4.4",
     "@hapi/inert": "^7.1.0",
@@ -25,14 +30,7 @@
     "joi": "^18.0.1",
     "nanoid": "^5.1.6",
     "node-pg-migrate": "^8.0.3",
-    "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "redis": "^5.9.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "eslint": "^9.39.1",
-    "globals": "^16.5.0",
-    "nodemon": "^3.1.10"
   }
 }
